# jnp-3r.net

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml
content/: alive-again.md  credits.md  lets-encrypt.md
content/blog/: alive-again.md  its-done.md  lets-encrypt.md
static/: global-style.css  global-style.css.map  global-style.scss
static/fonts/junction/: junction.css
static/fonts/leaguespartan/: leaguespartan-bold-webfont.eot  leaguespartan-light-webfont.eot  leaguespartan-regular-webfont.eot  leaguespartan.css
static/images/: 550x250
static/images/navbar/: discord-128.png~
templates/: .style.css.swp  entry.html  error.html  index-old.html  index.html  style.css
templates/blog/: index.html
