[tool.poetry]
name = "jnp-3r-net"
version = "0.1.0"
description = ""
authors = ["Juniper S. <wildcat8088@live.com>"]
readme = "README.md"
packages = [{include = "jnp_3r"}]

[tool.poetry.dependencies]
python = "^3.10"
publ = "^0.7.25"
gunicorn = "^20.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
